--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ footer {
     background-color: chocolate;
 }
 h3 {
-    margin-bottom: .020px;
+    margin-bottom: 10px;
     color:rgb(160, 131, 93);
 }
 h2 {
@@ -41,12 +41,12 @@ h2 {
     margin-bottom: 15px;
 }
 p {
-    margin: 0px;
+    margin: 5px;
 }
 a {
     font-size: 20px;
     text-decoration: none;
-    /*Didn't like the traditional underline touch*/    padding: 10px;
+    /*Didn't like the traditional underline touch*/padding: 10px;
     border-bottom: 2px solid transparent;
     transition: border-color all 0.3s ease;
 }
@@ -61,4 +61,12 @@ a:hover {
 }
 a:active {
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.3);
+}
+#signing-up{
+    display: flex;
+    justify-content:center;
+}
+.beauty {
+    display: flex;
+    justify-content: center;
 }
